ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.3.0
    • Affects Version/s: 2.0.6
    • Component/s: None
    • Environment:
      Linux ubuntu on AWS

      $ uname -a
      Linux domU-...-virtual #42-Ubuntu SMP Mon Apr 11 04:06:34 UTC 2011 x86_64 x86_64 x86_64 GNU/Linux


      $ cat /etc/issue
      Ubuntu 11.04
    • Linux
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When running my app, under what's probably relatively heavy load, after a few hours or maybe even days, the server crashed with the following:

      Sun Aug 26 13:01:50 [clientcursormon] mem (MB) res:5841 virt:13977 mapped:6094                                                                                                                  [228/1807]
      Sun Aug 26 13:02:00 [conn3696] Assertion: 13548:BufBuilder grow() > 64MB
      0x5848a2 0x5056e6 0x895d9f 0x7796f8 0x88e17c 0xaa0bc8 0x6389f7 0x7f1d2268dd8c 0x7f1d21c37c2d 
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo11msgassertedEiPKc+0x112) [0x5848a2]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod() [0x5056e6]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZNK5mongo7OpDebug6appendERKNS_5CurOpERNS_14BSONObjBuilderE+0x2bf) [0x895d9f]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo7profileERKNS_6ClientERNS_5CurOpE+0x218) [0x7796f8]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE+0x9fc) [0x88e17c]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE+0x78) [0xaa0bc8]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo3pms9threadRunEPNS_13MessagingPortE+0x287) [0x6389f7]
       /lib/x86_64-linux-gnu/libpthread.so.0(+0x6d8c) [0x7f1d2268dd8c]
       /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7f1d21c37c2d]
      Sun Aug 26 13:02:00 [conn3696] Assertion: 13548:BufBuilder grow() > 64MB
      0x5848a2 0x5056e6 0x509929 0x77a466 0x88e17c 0xaa0bc8 0x6389f7 0x7f1d2268dd8c 0x7f1d21c37c2d 
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo11msgassertedEiPKc+0x112) [0x5848a2]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod() [0x5056e6]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo14BSONObjBuilderD1Ev+0x259) [0x509929]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo7profileERKNS_6ClientERNS_5CurOpE+0xf86) [0x77a466]                                                                                                                                                                                      [205/1807]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE+0x9fc) [0x88e17c]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE+0x78) [0xaa0bc8]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo3pms9threadRunEPNS_13MessagingPortE+0x287) [0x6389f7]
       /lib/x86_64-linux-gnu/libpthread.so.0(+0x6d8c) [0x7f1d2268dd8c]
       /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7f1d21c37c2d]
      Sun Aug 26 13:02:00 terminate() called, printing stack:
      0xa957de 0x7f1d2243a926 0x7f1d224398f9 0x7f1d2243a215 0x7f1d21ef544b 0x7f1d21ef58bb 0x5099f6 0x77a466 0x88e17c 0xaa0bc8 0x6389f7 0x7f1d2268dd8c 0x7f1d21c37c2d 
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo11myterminateEv+0x5e) [0xa957de]
       /usr/lib/x86_64-linux-gnu/libstdc++.so.6(+0xb9926) [0x7f1d2243a926]
       /usr/lib/x86_64-linux-gnu/libstdc++.so.6(+0xb88f9) [0x7f1d224398f9]
       /usr/lib/x86_64-linux-gnu/libstdc++.so.6(__gxx_personality_v0+0x235) [0x7f1d2243a215]
       /lib/x86_64-linux-gnu/libgcc_s.so.1(+0xf44b) [0x7f1d21ef544b]
       /lib/x86_64-linux-gnu/libgcc_s.so.1(_Unwind_Resume+0x8b) [0x7f1d21ef58bb]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo14BSONObjBuilderD1Ev+0x326) [0x5099f6]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo7profileERKNS_6ClientERNS_5CurOpE+0xf86) [0x77a466]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE+0x9fc) [0x88e17c]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE+0x78) [0xaa0bc8]                                                                                                                                     [181/1807]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo3pms9threadRunEPNS_13MessagingPortE+0x287) [0x6389f7]
       /lib/x86_64-linux-gnu/libpthread.so.0(+0x6d8c) [0x7f1d2268dd8c]
       /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7f1d21c37c2d]
      Sun Aug 26 13:02:00 Got signal: 6 (Aborted).
      
      Sun Aug 26 13:02:00 Backtrace:
      0xa95ce9 0x7f1d21b84d80 0x7f1d21b84d05 0x7f1d21b88ab6 0xa958ab 0x7f1d2243a926 0x7f1d224398f9 0x7f1d2243a215 0x7f1d21ef544b 0x7f1d21ef58bb 0x5099f6 0x77a466 0x88e17c 0xaa0bc8 0x6389f7 0x7f1d2268dd8c 0x7f1d21c37c2d 
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo10abruptQuitEi+0x3a9) [0xa95ce9]
       /lib/x86_64-linux-gnu/libc.so.6(+0x33d80) [0x7f1d21b84d80]
       /lib/x86_64-linux-gnu/libc.so.6(gsignal+0x35) [0x7f1d21b84d05]
       /lib/x86_64-linux-gnu/libc.so.6(abort+0x186) [0x7f1d21b88ab6]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo11myterminateEv+0x12b) [0xa958ab]
       /usr/lib/x86_64-linux-gnu/libstdc++.so.6(+0xb9926) [0x7f1d2243a926]
       /usr/lib/x86_64-linux-gnu/libstdc++.so.6(+0xb88f9) [0x7f1d224398f9]
       /usr/lib/x86_64-linux-gnu/libstdc++.so.6(__gxx_personality_v0+0x235) [0x7f1d2243a215]
       /lib/x86_64-linux-gnu/libgcc_s.so.1(+0xf44b) [0x7f1d21ef544b]
       /lib/x86_64-linux-gnu/libgcc_s.so.1(_Unwind_Resume+0x8b) [0x7f1d21ef58bb]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo14BSONObjBuilderD1Ev+0x326) [0x5099f6]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo7profileERKNS_6ClientERNS_5CurOpE+0xf86) [0x77a466]                                                                                                                                                                                      [158/1807]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE+0x9fc) [0x88e17c]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE+0x78) [0xaa0bc8]
       /home/ubuntu/mongodb-linux-x86_64-2.0.6/bin/mongod(_ZN5mongo3pms9threadRunEPNS_13MessagingPortE+0x287) [0x6389f7]
       /lib/x86_64-linux-gnu/libpthread.so.0(+0x6d8c) [0x7f1d2268dd8c]
       /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7f1d21c37c2d]
      
      Logstream::get called in uninitialized state
      Sun Aug 26 13:02:00 ERROR: Client::~Client _context should be null but is not; client:conn
      Logstream::get called in uninitialized state
      Sun Aug 26 13:02:00 ERROR: Client::shutdown not called: conn
      

            Assignee:
            Randolph Tan
            Reporter:
            Ran Tavory
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: