SERVER-6860 Assertion: 13548:BufBuilder grow() > 64MB when trying to profile a huge document

Changed objsize() to size()

Conflicts:
	src/mongo/db/client.cpp
	src/mongo/db/introspect.cpp