src/mongo/db/introspect.cpp
@@ -28,6 +28,10 @@
 #include "mongo/db/ops/insert.h"
 #include "mongo/util/goodies.h"
 
+namespace {
+    const size_t MAX_PROFILE_DOC_SIZE_BYTES = 100*1024;
+}
+
 namespace mongo {
 
     static void _profile(const Client& c, CurOp& currentOp, BufBuilder& profileBufBuilder) {
@@ -37,20 +41,23 @@ namespace mongo {
         
         // build object
         BSONObjBuilder b(profileBufBuilder);
+
+        const bool isQueryObjTooBig = !currentOp.debug().append(currentOp, b,
+                MAX_PROFILE_DOC_SIZE_BYTES);
+
         b.appendDate("ts", jsTime());
-        currentOp.debug().append( currentOp , b );
+        b.append("client", c.clientAddress());
 
-        b.append("client", c.clientAddress() );
-
-        if ( c.getAuthenticationInfo() )
-            b.append( "user" , c.getAuthenticationInfo()->getUser( nsToDatabase( ns ) ) );
+        if (c.getAuthenticationInfo()) {
+            b.append("user", c.getAuthenticationInfo()->getUser(nsToDatabase(ns)));
+        }
 
         BSONObj p = b.done();
 
-        if (p.objsize() > 100*1024){
+        if (static_cast<size_t>(p.objsize()) > MAX_PROFILE_DOC_SIZE_BYTES || isQueryObjTooBig) {
             string small = p.toString(/*isArray*/false, /*full*/false);
 
-            warning() << "can't add full line to system.profile: " << small;
+            warning() << "can't add full line to system.profile: " << small << endl;
 
             // rebuild with limited info
             BSONObjBuilder b(profileBufBuilder);
@@ -60,7 +67,9 @@ namespace mongo {
                 b.append( "user" , c.getAuthenticationInfo()->getUser( nsToDatabase( ns ) ) );
 
             b.append("err", "profile line too large (max is 100KB)");
-            if (small.size() < 100*1024){ // should be much smaller but if not don't break anything
+
+            // should be much smaller but if not don't break anything
+            if (small.size() < MAX_PROFILE_DOC_SIZE_BYTES){
                 b.append("abbreviated", small);
             }
 
